src/objects/Offer__c.object
<CustomObject>
    <fields>
        <fullName>Top_5_trigger_3_Level__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <label>Top 5 trigger 3 Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_5_trigger_3_Name__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Top 5 trigger 3 Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Customer_Net_Price_Currency__c</fullName>
        <description>Req Num 3764 Offer fields for Multi BG Process Reporting</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>AP (Annual Plan) Currency reflecting as Total G4/G5 Customer Net Price</inlineHelpText>
        <label>Total Customer Net Price Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Customer_Unitary_Price_Currency__c</fullName>
        <description>Req Num 3764 Offer fields for Multi BG Process Reporting</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>G4/G5 Currency reflecting as Total Customer Unitary Price Currency</inlineHelpText>
        <label>Total Customer Unitary Price Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_LoA_Customer_Net_Price_CNP__c</fullName>
        <description>Req Num 3764 Offer fields for Multi BG Process Reporting</description>
        <label>Customer Net Price (CNP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_LoA_Customer_Unit_Price_CUP__c</fullName>
        <description>Req Num 3764 Offer fields for Multi BG Process Reporting</description>
        <label>Customer Unit Price (CUP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Net_Sales_in_LoA_EUR__c</fullName>
        <label>Net Sales (EUR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price_At_Approval_Net_Sale__c</fullName>
        <description>Requirement 1115</description>
        <label>Total Price At Approval Net Sale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unweighted_Amount__c</fullName>
        <description>Req 464: this will copy the unweighted Amount for active Offer</description>
        <formula>IF( ActiveOffer__c = true,  Opportunity__r.Amount, Null)</formula>
        <label>Unweighted Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Using_Pre_configured_Packages__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be ticked if Pre-Configured Packages (products/services/solutions with predefined blueprint, configuration, prices etc) will be part of the solution offered to customer.
ITBACRM-74-11Sept2020</description>
        <inlineHelpText>Flag if the offer production is automated, based on pre-configured solution &amp; price packages.</inlineHelpText>
        <label>Using Pre-configured Packages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WTD_Case__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>In case of error message &apos;Site can&apos;t be reached&apos; then please get connected to the Nokia network (via office LAN, NOSI wifi or VPN)</inlineHelpText>
        <label>WTD Case</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requirement 580</description>
        <label>3rd Party Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_copies__c</fullName>
        <description>Requirement 580</description>
        <label># of copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>all</fullName>
        <columns>Offer_Number__c</columns>
        <columns>NAME</columns>
        <columns>LoA_Approval_Level__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Customer_Account_Name__c</columns>
        <columns>Customer_Offer_Due_Date__c</columns>
        <columns>Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Offer_Number__c</field>
            <operation>equals</operation>
            <value>20.JP.920685.02</value>
        </filters>
        <label>All Offers</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Add_In_Versioning_Of_Uploaded_Document</fullName>
        <active>false</active>
        <description>#Req 064
Sprint 3
To Validate File Versioning on Offer  Object.</description>
        <errorConditionFormula>AND( 
( OR( Add_In_Version__c &lt; VALUE($Label.Excel_Add_In_Version), Add_In_Version__c = null)), 
!(ISCHANGED( Price__c )), 
$Profile.Name=$Label.Excel_Add_In_Profile_Name 
)</errorConditionFormula>
        <errorMessage>Please upload LoA File using New Add in Version . The version you tried to load is outdated. The Excel Add-in Version should be v2.7.0.0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Offer_Due_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Name  &lt;&gt; $Label.Data_Loader_Profile_Name,
OR(Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos;,
Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos; ,Opportunity__r.RecordType.DeveloperName == &apos;Read_Only&apos;,Opportunity__r.RecordType.DeveloperName == &apos;Read_Only_Indirect&apos;) ,
TEXT(Opportunity__r.Business_Type__c )!=&apos;Fast Track Opportunity&apos;,
NOT(
OR(
ISPICKVAL( Opportunity__r.StageName, &apos;Identify Opportunity&apos;),
ISPICKVAL( Opportunity__r.StageName, &apos;Develop Opportunity&apos;),
ISPICKVAL( Opportunity__r.StageName, &apos;Create Offer (Bid)&apos;))),
ISCHANGED( Customer_Offer_Due_Date__c ) )</errorConditionFormula>
        <errorDisplayField>Customer_Offer_Due_Date__c</errorDisplayField>
        <errorMessage>It will not be possible to update the field once opportunity is G4 approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Edit_No_LoA</fullName>
        <active>true</active>
        <description>28Feb2020 Feature 1144 &amp; 2005: LoA Bypass = &quot;No LoA&quot; or &quot;Pre-approved price list for Account Manager&quot; can be selected only if an opportunity has been added in &quot;Reference Opportunity&quot; field and if that related oppty has been G4 approved with a LoA level.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; $Label.Data_Loader_Profile_Name,
OR(
Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos;,
Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos;,
Opportunity__r.RecordType.DeveloperName == &apos;Read_Only&apos;,
Opportunity__r.RecordType.DeveloperName == &apos;Read_Only_Indirect&apos;),

AND
(
AND (ISCHANGED(LOA_Bypass__c), OR(ISPICKVAL(LOA_Bypass__c,&apos;No LoA&apos;), ISPICKVAL(LOA_Bypass__c,&apos;Pre-approved Price List for Account Managers&apos;) ) ),
OR (ISBLANK(Opportunity__r.Reference_Opportunity__r.G4_Approval_Date__c),ISBLANK(Opportunity__r.Reference_Opportunity__r.LOA_Level__c))

)

)</errorConditionFormula>
        <errorDisplayField>LOA_Bypass__c</errorDisplayField>
        <errorMessage>G4/G5 Bypass offer condition = &quot;G4 approved or contracted&quot; or &quot;Pre-approved price list for Account Manager&quot; can be selected only if an opportunity has been added in &quot;Reference Opportunity&quot; field and if that related oppty has been G4 approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fast_Track_Unchangeble_fields</fullName>
        <active>true</active>
        <description>Block the edition of G4/G5 Bypass Condition for a Fast Track Opportunity</description>
        <errorConditionFormula>AND($Profile.Name&lt;&gt;$Label.Data_Loader_Profile_Name,
    TEXT(Opportunity__r.Business_Type__c )=&apos;Fast Track Opportunity&apos;,
    ISCHANGED(LOA_Bypass__c),
				NOT(OR(
        ISPICKVAL( Opportunity__r.Phase_Status__c , &apos;PTA (PROJECT TARGET AGREEMENT) HANDOVER TO DELIVERY/OPERATIONS&apos;),
							 ISPICKVAL( Opportunity__r.Phase_Status__c , &apos;In Execution&apos;)
    ))
)</errorConditionFormula>
        <errorDisplayField>LOA_Bypass__c</errorDisplayField>
        <errorMessage>G4/G5 Bypass Offer Condition cannot be changed with Fast Track Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Freeze_AppScope_After_G5</fullName>
        <active>true</active>
        <description>Freeze approval scope after G5 Approval</description>
        <errorConditionFormula>!ISNEW() &amp;&amp;
	ISCHANGED( Approval_Scope__c )  &amp;&amp;
	NOT(ISBLANK( Opportunity__r.G5_Approval_Date__c)) &amp;&amp;
	( ISPICKVAL(Opportunity__r.StageName , &quot;Handover (Prepare for Delivery)&quot;) ||
	ISPICKVAL(Opportunity__r.StageName , &quot;Execute (Start Delivery)&quot;) ||
	ISPICKVAL(Opportunity__r.StageName , &quot;Completed&quot;) ) &amp;&amp;
	$Profile.Name&lt;&gt; $Label.Data_Loader_Profile_Name &amp;&amp;
	$Profile.Name&lt;&gt; $Label.System_Admin_Profile &amp;&amp;
	$Profile.Name&lt;&gt; $Label.Global_Process_Admin_Profile_Name &amp;&amp;
	( Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos; ||
	Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos; )</errorConditionFormula>
        <errorDisplayField>Approval_Scope__c</errorDisplayField>
        <errorMessage>This offer field cannot be edited after G5 approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Freeze_Decision_Maker_and_Bypass_Offer</fullName>
        <active>true</active>
        <description>SF ticket No.- 01925623</description>
        <errorConditionFormula>AND(
										$Profile.Name &lt;&gt; $Label.Data_Loader_Profile_Name,
										G4_passed__c = true,
										TEXT(Opportunity__r.Business_Type__c )!=&apos;Fast Track Opportunity&apos;,
          OR(ISCHANGED(LOA_Bypass__c), ISCHANGED(Decision_Maker__c)   )
)</errorConditionFormula>
        <errorMessage>Offer has been already used for G4 or G4 bypass so it is not possible to edit these fields anymore.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Freeze_Description_After_G5</fullName>
        <active>true</active>
        <description>Freeze description after G5 Approval</description>
        <errorConditionFormula>!ISNEW() &amp;&amp;
	ISCHANGED(  Offer_Description__c ) &amp;&amp;
	NOT(ISBLANK( Opportunity__r.G5_Approval_Date__c)) &amp;&amp;
	( ISPICKVAL(Opportunity__r.StageName , &quot;Handover (Prepare for Delivery)&quot;) ||
	ISPICKVAL(Opportunity__r.StageName , &quot;Execute (Start Delivery)&quot;) ||
	ISPICKVAL(Opportunity__r.StageName , &quot;Completed&quot;) ) &amp;&amp;
	$Profile.Name&lt;&gt; $Label.Data_Loader_Profile_Name &amp;&amp;
	$Profile.Name&lt;&gt; $Label.System_Admin_Profile &amp;&amp;
	$Profile.Name&lt;&gt; $Label.Global_Process_Admin_Profile_Name &amp;&amp;
	( Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos; ||
	Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos; )</errorConditionFormula>
        <errorDisplayField>Offer_Description__c</errorDisplayField>
        <errorMessage>This offer field cannot be edited after G5 approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Freeze_G4ApprovalDate_and_LoABypassOffer</fullName>
        <active>true</active>
        <description>Req 4802: Merge Offer Validation Rules</description>
        <errorConditionFormula>AND(
	OR(
	ISPICKVAL( Opportunity__r.StageName , &quot;Win the Case (Negotiate)&quot;),
	ISPICKVAL( Opportunity__r.StageName , &quot;Handover (Prepare for Delivery)&quot;),
	ISPICKVAL( Opportunity__r.StageName , &quot;Execute (Start Delivery)&quot;),
	ISPICKVAL( Opportunity__r.StageName , &quot;Completed&quot;)
	),
	$Profile.Name&lt;&gt;$Label.Data_Loader_Profile_Name,
	OR(
		AND(
			!ISNULL(PRIORVALUE(G4_Approval_Date__c )),
			ISCHANGED( G4_Approval_Date__c ),
			G4_Approval_Date__c != DATEVALUE( Opportunity__r.G4_Approval_Date__c )
		),
		AND(
			ISCHANGED(LOA_Bypass__c),
			TEXT(Opportunity__r.Business_Type__c )!=&apos;Fast Track Opportunity&apos;,
			OR(
			Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos;,
			Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos;,
			Opportunity__r.RecordType.DeveloperName == &apos;Read_Only&apos;,
			Opportunity__r.RecordType.DeveloperName == &apos;Read_Only_Indirect&apos;
			)
		)
	)
)</errorConditionFormula>
        <errorMessage>G4 Approval Date and G4/G5 Bypass offer condition are fixed and cannot be edited manually.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Freeze_Offer_Fields</fullName>
        <active>true</active>
        <description>Req 4802: Merge offer validation rules.</description>
        <errorConditionFormula>AND ( 
OR(
	ISPICKVAL( Opportunity__r.StageName , &quot;Win the Case (Negotiate)&quot;), 
	ISPICKVAL( Opportunity__r.StageName , &quot;Handover (Prepare for Delivery)&quot;) 
), 
$Profile.Name&lt;&gt; $Label.Data_Loader_Profile_Name,
OR(
	ISCHANGED( Pre_approved_Decision_Maker__c ),
	ISCHANGED( Opportunity__c ),
	ISCHANGED( Offer_Number__c ),
	ISCHANGED( LoA_G4_Approval_Level__c ),
	ISCHANGED( LastModifiedById ),
	ISCHANGED( Customer_Account_Name__c ),
	ISCHANGED( Country_of_Delivery__c )
),
OR( 
Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Read_Only&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Read_Only_Indirect&apos; 
) 
)</errorConditionFormula>
        <errorMessage>The Offer field you are trying to modify is fixed and cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LoA_mutually_exclusive_check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  OR(AND(No_LoA__c = True,Pre_approved_Price_List_for_Acc_Managers__c = True), AND(Authorized_for_Pricing_Manager__c = True, No_LoA__c = True), AND(Pre_approved_Price_List_for_Acc_Managers__c = True, Authorized_for_Pricing_Manager__c = True), AND(Pre_approved_Price_List_for_Acc_Managers__c = True, Authorized_for_Pricing_Manager__c = True, No_LoA__c = True)),
  $Profile.Name&lt;&gt;$Label.Data_Loader_Profile_Name
  )</errorConditionFormula>
        <errorMessage>Among &quot;G4 approved or contracted&quot;, &quot;Authorized for Pricing Manager&quot;, only one can be checked at a time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NF_AvoidOfferSaveOnPendingOpps</fullName>
        <active>true</active>
        <description>Avoid saving Offers when Opportunity is on Pending Approvals</description>
        <errorConditionFormula>AND(ISPICKVAL(Opportunity__r.Apttus_Approval__Approval_Status__c , &apos;Pending Approval&apos;),
$Profile.Name&lt;&gt;&apos;System Administrator&apos;, 
$Profile.Name&lt;&gt;&apos;Global Process Admin Profile&apos;, 
$Profile.Name&lt;&gt;&apos;Integration API Only Profile&apos;, 
$Profile.Name&lt;&gt;&apos;Data Loader Profile&apos; 
)</errorConditionFormula>
        <errorMessage>You cannot update the offer, when the opportunity is pending for approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Offer_Creation_Past_G3</fullName>
        <active>true</active>
        <description>D-0743: Offer Creation when Sales Phase is &apos;Create Offer (Bid)&apos; or &apos;Win the Case&apos;.
Req 943: Allowing offer creation from intial Sales Phase.
: Req 888 - For New Sales Path (Updated on 30-05-2017).</description>
        <errorConditionFormula>AND(
ISNEW(), 
$Profile.Name != &apos;Data Loader Profile&apos;,
OR( 
Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Read_Only&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Read_Only_Indirect&apos; 
), 
OR(
TEXT(Opportunity__r.Phase_Status__c) = &apos;Submitted for G2 Approval&apos;,
TEXT(Opportunity__r.Phase_Status__c) = &apos;Submitted for G3 Approval&apos;,
TEXT(Opportunity__r.Phase_Status__c) = &apos;Submitted for G4 Approval&apos;,
TEXT(Opportunity__r.Phase_Status__c) = &apos;Submitted for G5 Approval&apos;,
TEXT(Opportunity__r.Phase_Status__c) = &apos;Submitted for G6 Approval&apos;,
TEXT(Opportunity__r.Phase_Status__c) = &apos;Closed&apos;,
TEXT(Opportunity__r.Phase_Status__c) = &apos;Closed(not won)&apos;,
TEXT(Opportunity__r.Phase_Status__c) = &apos;Closed Handover&apos;,
TEXT(Opportunity__r.StageName) = &apos;Handover (Prepare for Delivery)&apos;,
TEXT( Opportunity__r.StageName) = &apos;Execute (Start Delivery)&apos;,
TEXT(Opportunity__r.StageName) = &apos;Closed&apos;
)
)</errorConditionFormula>
        <errorMessage>Offer cannot be created past G5 or when Opportunity is locked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Offer_locked_at_Pending_Win_Loss</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; $Label.Data_Loader_Profile_Name, 

OR( 
Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos; 
), OR( 
ISPICKVAL( Opportunity__r.Phase_Status__c , &apos;Pending Win/Loss Declaration&apos;), ISPICKVAL( Opportunity__r.Phase_Status__c , &apos;PTA (PROJECT TARGET AGREEMENT) HANDOVER TO DELIVERY/OPERATIONS&apos;),ISPICKVAL( Opportunity__r.Phase_Status__c , &apos;PTA (PROJECT TARGET AGREEMENT) HANDOVER TO DELIVERY/OPERATIONS&apos;),ISPICKVAL( Opportunity__r.Phase_Status__c , &apos;In Execution&apos;)), 
AND(NOT(ISCHANGED(Document_Collaboration_site_SFDocs__c)))
)</errorConditionFormula>
        <errorMessage>Active offer cannot be changed past G5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Manual_change_SSO_To_Attached</fullName>
        <active>true</active>
        <description>Req:5091 :Solution Sign-Off Validations</description>
        <errorConditionFormula>AND( 
 ISNEW() ,
$Profile.Name&lt;&gt;$Label.Data_Loader_Profile_Name,
OR( 
Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos;
),
  ISPICKVAL(Solution_Sign_Off_New__c,&apos;Required (Attached)&apos;)
)</errorConditionFormula>
        <errorMessage>Please attach a Solution Sign-Off document. &apos;Required (attached)&apos; will be updated automatically.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Versioning_Of_Uploaded_Document</fullName>
        <active>false</active>
        <description>#Req 064
Sprint 3
To Validate File Versioning on Offer  Object.</description>
        <errorConditionFormula>AND( 
(Excel_File_Version__c &lt; VALUE($Label.Excel_File_Version)), 
!(ISCHANGED( Price__c )), 
$Profile.Name= $Label.Excel_Add_In_Profile_Name 
)</errorConditionFormula>
        <errorMessage>Please proceed with LoA data upload using Win the Deal tool. 
Is not permitted to upload with LoA file.</errorMessage>
    </validationRules>
</CustomObject>