src/objects/Offer__c/validationRules/Add_In_Versioning_Of_Uploaded_Document.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_In_Versioning_Of_Uploaded_Document</fullName>
    <active>false</active>
    <description>#Req 064
Sprint 3
To Validate File Versioning on Offer  Object.</description>
    <errorConditionFormula>AND( 
( OR( Add_In_Version__c &lt; VALUE($Label.Excel_Add_In_Version), Add_In_Version__c = null)), 
!(ISCHANGED( Price__c )), 
$Profile.Name=$Label.Excel_Add_In_Profile_Name 
)</errorConditionFormula>
    <errorMessage>Please upload LoA File using New Add in Version . The version you tried to load is outdated. The Excel Add-in Version should be v2.7.0.0</errorMessage>
</ValidationRule>