src/objects/Offer__c/validationRules/Edit_No_LoA.validationRule-meta.xml
<ValidationRule>
    <fullName>Edit_No_LoA</fullName>
    <active>true</active>
    <description>28Feb2020 Feature 1144 &amp; 2005: LoA Bypass = &quot;No LoA&quot; or &quot;Pre-approved price list for Account Manager&quot; can be selected only if an opportunity has been added in &quot;Reference Opportunity&quot; field and if that related oppty has been G4 approved with a LoA level.</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; $Label.Data_Loader_Profile_Name,
OR(
Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos;,
Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos;,
Opportunity__r.RecordType.DeveloperName == &apos;Read_Only&apos;,
Opportunity__r.RecordType.DeveloperName == &apos;Read_Only_Indirect&apos;),

AND
(
AND (ISCHANGED(LOA_Bypass__c), OR(ISPICKVAL(LOA_Bypass__c,&apos;No LoA&apos;), ISPICKVAL(LOA_Bypass__c,&apos;Pre-approved Price List for Account Managers&apos;) ) ),
OR (ISBLANK(Opportunity__r.Reference_Opportunity__r.G4_Approval_Date__c),ISBLANK(Opportunity__r.Reference_Opportunity__r.LOA_Level__c))

)

)</errorConditionFormula>
    <errorDisplayField>LOA_Bypass__c</errorDisplayField>
    <errorMessage>G4/G5 Bypass offer condition = &quot;G4 approved or contracted&quot; or &quot;Pre-approved price list for Account Manager&quot; can be selected only if an opportunity has been added in &quot;Reference Opportunity&quot; field and if that related oppty has been G4 approved</errorMessage>
</ValidationRule>