src/objects/Offer__c/validationRules/Freeze_Description_After_G5.validationRule-meta.xml
<ValidationRule>
    <fullName>Freeze_Description_After_G5</fullName>
    <active>true</active>
    <description>Freeze description after G5 Approval</description>
    <errorConditionFormula>!ISNEW() &amp;&amp;
	ISCHANGED(  Offer_Description__c ) &amp;&amp;
	NOT(ISBLANK( Opportunity__r.G5_Approval_Date__c)) &amp;&amp;
	( ISPICKVAL(Opportunity__r.StageName , &quot;Handover (Prepare for Delivery)&quot;) ||
	ISPICKVAL(Opportunity__r.StageName , &quot;Execute (Start Delivery)&quot;) ||
	ISPICKVAL(Opportunity__r.StageName , &quot;Completed&quot;) ) &amp;&amp;
	$Profile.Name&lt;&gt; $Label.Data_Loader_Profile_Name &amp;&amp;
	$Profile.Name&lt;&gt; $Label.System_Admin_Profile &amp;&amp;
	$Profile.Name&lt;&gt; $Label.Global_Process_Admin_Profile_Name &amp;&amp;
	( Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos; ||
	Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos; )</errorConditionFormula>
    <errorDisplayField>Offer_Description__c</errorDisplayField>
    <errorMessage>This offer field cannot be edited after G5 approval</errorMessage>
</ValidationRule>