src/objects/Offer__c/validationRules/Freeze_G4ApprovalDate_and_LoABypassOffer.validationRule-meta.xml
<ValidationRule>
    <fullName>Freeze_G4ApprovalDate_and_LoABypassOffer</fullName>
    <active>true</active>
    <description>Req 4802: Merge Offer Validation Rules</description>
    <errorConditionFormula>AND(
	OR(
	ISPICKVAL( Opportunity__r.StageName , &quot;Win the Case (Negotiate)&quot;), 
	ISPICKVAL( Opportunity__r.StageName , &quot;Handover (Prepare for Delivery)&quot;), 
	ISPICKVAL( Opportunity__r.StageName , &quot;Execute (Start Delivery)&quot;),
	ISPICKVAL( Opportunity__r.StageName , &quot;Completed&quot;)
	),
	$Profile.Name&lt;&gt;$Label.Data_Loader_Profile_Name, 
	OR(
		AND(
			!ISNULL(PRIORVALUE(G4_Approval_Date__c )),
			ISCHANGED( G4_Approval_Date__c ),
			G4_Approval_Date__c != DATEVALUE( Opportunity__r.G4_Approval_Date__c )
		),
		AND(
			ISCHANGED(LOA_Bypass__c),		
			OR( 
			Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos;, 
			Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos;, 
			Opportunity__r.RecordType.DeveloperName == &apos;Read_Only&apos;, 
			Opportunity__r.RecordType.DeveloperName == &apos;Read_Only_Indirect&apos; 
			)
		)
	)
)</errorConditionFormula>
    <errorMessage>G4 Approval Date and G4/G5 Bypass offer condition are fixed and cannot be edited manually.</errorMessage>
</ValidationRule>