src/objects/Offer__c/validationRules/Freeze_NPI_C5_After_Successful_G4.validationRule-meta.xml
<ValidationRule>
    <fullName>Freeze_NPI_C5_After_Successful_G4</fullName>
    <active>true</active>
    <description>Requirement 956: The ‘Pre C5 NPI support required’ field should remain editable till the opportunity reached Gate 4, and afterwards the answer should be frozen, to reflect the requirement at the time of offer submission.</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; $Label.Data_Loader_Profile_Name,
  OR(G4_Approval_Date__c = TODAY(),
        G4_Approval_Date__c &lt; TODAY()
    ),
    ISCHANGED(Pre_C5_Flag_NPI__c)
)</errorConditionFormula>
    <errorDisplayField>Pre_C5_Flag_NPI__c</errorDisplayField>
    <errorMessage>You cannot edit &apos;Pre-C5 NPI Support Required&apos; after successful G4.</errorMessage>
</ValidationRule>