src/objects/Offer__c/validationRules/LoA_mutually_exclusive_check.validationRule-meta.xml
<ValidationRule>
    <fullName>LoA_mutually_exclusive_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR(AND(No_LoA__c = True,Pre_approved_Price_List_for_Acc_Managers__c = True), AND(Authorized_for_Pricing_Manager__c = True, No_LoA__c = True), AND(Pre_approved_Price_List_for_Acc_Managers__c = True, Authorized_for_Pricing_Manager__c = True), AND(Pre_approved_Price_List_for_Acc_Managers__c = True, Authorized_for_Pricing_Manager__c = True, No_LoA__c = True)),
  $Profile.Name&lt;&gt;$Label.Data_Loader_Profile_Name
  )</errorConditionFormula>
    <errorMessage>Among &quot;G4 approved or contracted&quot;, &quot;Authorized for Pricing Manager&quot;, only one can be checked at a time.</errorMessage>
</ValidationRule>