src/objects/Offer__c/validationRules/Offer_locked_at_Pending_Win_Loss.validationRule-meta.xml
<ValidationRule>
    <fullName>Offer_locked_at_Pending_Win_Loss</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  
	$Profile.Name &lt;&gt; $Label.Data_Loader_Profile_Name,
	
	OR(
		Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos;, 
		Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos;
		), OR(
	ISPICKVAL( Opportunity__r.Phase_Status__c , &apos;Pending Win/Loss Declaration&apos;), ISPICKVAL( Opportunity__r.Phase_Status__c , &apos;PTA (PROJECT TARGET AGREEMENT) HANDOVER TO DELIVERY/OPERATIONS&apos;),ISPICKVAL( Opportunity__r.Phase_Status__c , &apos;PTA (PROJECT TARGET AGREEMENT) HANDOVER TO DELIVERY/OPERATIONS&apos;),ISPICKVAL( Opportunity__r.Phase_Status__c , &apos;In Execution&apos;)) 
)</errorConditionFormula>
    <errorMessage>Active offer cannot be changed past G5</errorMessage>
</ValidationRule>