src/objects/Offer__c/validationRules/Versioning_Of_Uploaded_Document.validationRule-meta.xml
<ValidationRule>
    <fullName>Versioning_Of_Uploaded_Document</fullName>
    <active>false</active>
    <description>#Req 064
Sprint 3
To Validate File Versioning on Offer  Object.</description>
    <errorConditionFormula>AND( 
(Excel_File_Version__c &lt; VALUE($Label.Excel_File_Version)), 
!(ISCHANGED( Price__c )), 
$Profile.Name= $Label.Excel_Add_In_Profile_Name 
)</errorConditionFormula>
    <errorMessage>Please proceed with LoA data upload using Win the Deal tool. 
Is not permitted to upload with LoA file.</errorMessage>
</ValidationRule>